August_30/August_30/src/objects/Fee_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fee Schedules</relationshipLabel>
        <relationshipName>Fee_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_No__c</fullName>
        <label>Check No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_No__c</fullName>
        <inlineHelpText>Wire Transfer Confirmation Number</inlineHelpText>
        <label>Confirmation No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_CC_Number__c</fullName>
        <label>Credit Card CC Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Fee Schedules</relationshipLabel>
        <relationshipName>Fee_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Details__c</fullName>
        <label>Payment Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payment_Method__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check No</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer Confirmation No</fullName>
                </value>
                <value>
                    <fullName>Credit Card CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_No__c</fullName>
        <description>auto number [standard field, provided when creating custom object]</description>
        <displayFormat>A-{000}</displayFormat>
        <label>Payment No</label>
        <type>AutoNumber</type>
    </fields>
    <label>Fee Schedule</label>
    <nameField>
        <label>Fee Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Payment_Method_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISCHANGED(Credit_Card_CC_Number__c),
ISNEW()
),
NOT(ISBLANK(Credit_Card_CC_Number__c)),
TEXT(Payment_Method__c) &lt;&gt; "Credit Card"
)</errorConditionFormula>
        <errorDisplayField>Credit_Card_CC_Number__c</errorDisplayField>
        <errorMessage>You can not edit this field until the pick list payment method is Credit card</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Method_Validation_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISCHANGED(Confirmation_No__c),
ISNEW()
),
NOT(ISBLANK(Confirmation_No__c)),
TEXT(Payment_Method__c) &lt;&gt; "Wire Transfer"
)</errorConditionFormula>
        <errorDisplayField>Confirmation_No__c</errorDisplayField>
        <errorMessage>You can not edit this field until the pick list payment method is Wire Transfer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Method_Validation_3</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISCHANGED(Check_No__c),
ISNEW()
),
NOT(ISBLANK(Check_No__c)),
TEXT(Payment_Method__c) &lt;&gt; "Check"
)</errorConditionFormula>
        <errorDisplayField>Check_No__c</errorDisplayField>
        <errorMessage>You can not edit this field until the pick list payment method is Check</errorMessage>
    </validationRules>
</CustomObject>